# Dolos

./: .clang-tidy  CMakeLists.txt  README.md  conanfile.txt  justfile  openapi.yaml  server_state.h
admin/: admin.c  admin.h
client/: client.c  client.h  main.c  tui.c  tui.h
config/: client.cfg  server.cfg
demo/: .gitignore  ll_stack_plag.py  other_stack.c  stack_original.c  stack_plag.c
python-client/: client.py  requirements.txt
server/: main.c  server.c  server.h  test-alg.c
services/: service.h
